KSBWI-277 Added ios fix for bleeding layout ouside of iframe, adjusted timer vertical alignment

--- a/src/scss/widget/_general.scss
+++ b/src/scss/widget/_general.scss
@@ -27,3 +27,7 @@
       -webkit-transition-duration: 0s;
    }
 }
+
+.ios .KambiWidget-outcome__label {
+   white-space: normal;
+}
